--- a/Week4/Week4PracticalTask4/Week4PracticalTask4/Week4PracticalTask4.vcxproj
+++ b/Week4/Week4PracticalTask4/Week4PracticalTask4/Week4PracticalTask4.vcxproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <ClCompile Include="Week4PracticalTask4.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="alphabet.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
