--- a/Week4/Week4ChallengeTask/Week4ChallengeTask/Week4ChallengeTask.vcxproj
+++ b/Week4/Week4ChallengeTask/Week4ChallengeTask/Week4ChallengeTask.vcxproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <ClCompile Include="Week4ChallengeTask.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Maze.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
