--- a/Week5/Week5PracticalTask5/Week5PracticalTask5/Week5PracticalTask5.vcxproj
+++ b/Week5/Week5PracticalTask5/Week5PracticalTask5/Week5PracticalTask5.vcxproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <ClCompile Include="Week5PracticalTask5.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="dictionary.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
