--- a/Week5/Week5PracticalTask5/Week5PracticalTask5/Week5PracticalTask5.vcxproj.filters
+++ b/Week5/Week5PracticalTask5/Week5PracticalTask5/Week5PracticalTask5.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="dictionary.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
