--- a/Week11/Week11PracticalTask2/Week11PracticalTask2/Week11PracticalTask2.vcxproj
+++ b/Week11/Week11PracticalTask2/Week11PracticalTask2/Week11PracticalTask2.vcxproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <ClCompile Include="Week11PracticalTask2.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Items.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
